scss/style.scss
@import 'normalize';
@import 'variables';
@import 'mixins';

* {
  box-sizing: border-box;
}

html {
  font-size: 10px;
}
body {
  @include font($ff: $body-ff, $fz: 1.6rem, $fc: $body-color, $fw: 400, $lh: 1.3);
  padding: 0;
  background-color: $body-bg;
  overflow-x: hidden;
}
ul {
  list-style:none;
  padding: 0;
  margin: 0;
}

.container {
  margin: 0 auto;
  max-width: 1170px;
  padding: 15px;
}
 
.title {
  font-size: 2rem;
  font-weight: 700;
  max-width: 800px;
  margin: 0 auto;
  padding-bottom: 40px;
  position: relative;

  @media screen and (min-width: 576px) {
    font-size: 3.5rem;
  }
  @media screen and (min-width: 1200px) {
    font-size: 4.5rem;
  }

  &--marked {
    color: $primary-color;
  }
  &--header {
    text-align: center;

    &:before {
      
      text-transform: uppercase;
      opacity: .1;
      font-size: 4.5rem;
      position: absolute;
      top: -16%;
      left: 18%;
      transform: scale(1.5);
      z-index: -1;

      @media screen and (min-width: 768px) {
        content: "бизнес с TL-Holding";
      }
      @media screen and (min-width: 992px) {
        font-size: 6rem;
        left: 9%;
      }
    }
  }

  &--achievements {
    margin-top: 80px;
    text-align: center;
    font-size: 3rem;
    max-width: 280px;
    
    @media screen and (min-width: 768px) {
      max-width: 100%;
    }
    @media screen and (min-width: 992px) {
      text-align: left;
      line-height: 2.2;
    }
    &:before {
      text-transform: uppercase;
      opacity: .1;
      font-size: 3.5rem;
      position: absolute;
      z-index: -1;

      @media screen and (min-width: 768px) {
        content: "открываем";
        top: -36%;
        left: 33%;
        transform: scale(3);
      }
      @media screen and (min-width: 992px) {
        top: -24%;
        left: 32%;
        transform: scale(2.2);
      }
      @media screen and (min-width: 1200px) {
        font-size: 4.5rem;
        transform: scale(1.7);
        top: -31%;
        left: 20%;
      }
    }
  }
}

.header {
  background-image: linear-gradient( rgba(251, 176, 16, .3), #fff);
  text-align: center;
  padding: 15px 0;  

  @media screen and (min-width: 768px) {
    padding: 50px 0; 
  }

  &--container {
    background-image: url(../img/prewiew.png);
    background-repeat: no-repeat;
    background-position: center;
  }

  
  &__subtitle {
    font-size: 1.3rem;
    font-weight: 400;
    max-width: 600px;
    text-align: center;
    margin: 0 auto;
    
    @media screen and (min-width: 992px) {
      font-size: inherit;
    }
  }
  &__main {
    position: relative;

    @media screen and (min-width: 992px) {
      padding: 80px 0 0;
    }
  }
}

.logo {
  display: inline-block;
  margin: 30px auto;
  z-index: 10;

  @media screen and (min-width: 992px) {
    margin: 90px 0 0;
    @include posA($top: 20%);

  }

  &__wraper {
    display: inline-block;
    height: 170px;
    width: 170px;
    border-radius: 50%;
    background-image: linear-gradient(90deg, $primary-color, $primary-light);
    position: relative;
  }
  &__img {
    @include posA;
  }

  &:before,
  &:after {
    
    @media screen and (min-width: 1200px) {
      content: "";
      display: inline-block;
      width: 5px;
      height: 300px;
      background-color: rgba(204, 204, 204, .5);
      position: absolute;
      top: -50%;
      left: 50%;
      z-index: -2;
    }
  }
  &:before {
    transform: translate(-50%, 2%) rotate(60deg);
  }
  &:after {
    transform: translate(-50%, 2%) rotate(-60deg);
  }
}

.features {
  grid-template-columns: 1fr 1fr;
  grid-template-rows: repeat(3, 10S0px);

  @media screen and (min-width: 992px) {
    display: grid;
  }

  &__feature {
    font-size: 1.3rem;
    width: 250px;
    text-align: left;
    margin: 0 auto 15px;
    background-color: $secondary-color;
    border-radius: 5px;
    padding: 10px 30px;
    box-shadow: 0px 0px 15px rgba(0, 0, 0, .3);
    position: relative;
    display: flex;
    align-items: center;

    @media screen and (min-width: 992px) {
      margin: 0 auto 100px;
      font-size: 1.4rem;
      width: 300px;
    }

    &:last-of-type {
      grid-column: 1/3;
      position: relative;
      margin-bottom: 60px;

      @media screen and (min-width: 992px) {
        padding: 30px 10px 20px;
      }

      .features__text {
        margin: 0 auto;
      }
      .features__icon {
        @media screen and (min-width: 992px) {
          left: 50%;
          top: 0;
        }
      }

      &:before {
        
        @media screen and (min-width: 1200px) {
          content: "";
          display: inline-block;
          width: 5px;
          height: 120px;
          background-color: rgba(204, 204, 204, .5);
          position: absolute;
          top: -120%;
          left: 50%;
          transform: translate(-50%, -20%);
          z-index: 0;
        }
      }
    }
    &:nth-of-type(2n) {
      .features__icon {
        
        @media screen and (min-width: 992px) {
          left: 0;
        }
      }
    }

  }
  &__text {
    max-height: 60px;
    overflow: hidden;
    vertical-align: middle;
  }
  &__icon {
    height: 40px;
    width: 40px;
    border-radius: 50%;
    background-image: linear-gradient(90deg, $primary-color, $primary-light);
    @include posA($top: 50%, $left: 100%, $delta_x: -50%, $delta_y: -50%);
    z-index: 10;    

    & svg {
      fill: $secondary-color;
      @include posA;
    }
  }
}
.conection {
  text-decoration: none;
  color: $secondary-color;
  background-image: linear-gradient(90deg, $primary-color, $primary-light);
  padding: 10px 15px;
  text-transform: uppercase;
  border-radius: 50px;
  @include tr;

  @include hover {
    opacity: .8;
  }
}

.info {

  &--container {
    

    @media screen and (min-width: 992px) {
      display: grid;
      grid-template-columns: repeat(2, 1fr);
    }

  }

  &__map {
    display: flex;
    flex-direction: column;
    align-items: center;

    @media screen and (min-width: 992px) {
      background-size: contain;
      flex-direction: row;
      align-items: flex-end;
      background-image: url(../img/map.png);
      background-repeat: no-repeat;
    }

    &-img {
      display: block;
      width: 100%;

      @media screen and (min-width: 576px) {
        width: 70%;
        margin: 0 auto;
      }
      @media screen and (min-width: 992px) {
        display: none;
      }
    }
  }

  .countries {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
  }
  .country {
    display: flex;
    align-items: center;
    padding-bottom: 5px;

    &__flag-wraper {
      max-width: 16px;
      max-height: 16px;
      overflow: hidden;
    }

    &__flag {
      width: 100%;
    }

    &__name {
      font-size: 1.3rem;
      padding: 0 2em 0 .7em;
    }
  }
}

.achievements {
  

  @media screen and (min-width: 992px) {
    padding-left: 100px;
  }
}

.achieve {
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
  margin: 0 auto 20px;
  position: relative;
  display: flex;
  align-items: center;
  max-width: 400px;
  font-size: 1.4rem;
  padding-right: 10px;


  @media screen and (min-width: 576px) {
    font-size: inherit;
  }
  @media screen and (min-width: 992px) {
    margin-left: 0;
    margin-right: 0;
  }

  &__number {
    font-size: 5rem;
    line-height: 8rem;
    display: inline-block;
    padding: 0 .4em;

    @media screen and (min-width: 576px) {
      font-size: 6rem;
    }
  }


  &:before {
    content: "";
    display: inline-block;
    width: 2px;
    height: 80px;
    position: absolute;
  }

  &--age {
    background-color: rgba($age-color, .1);
    

    &:before {
      background-color: $age-color;
    }
    & .achieve__number {
      color: $age-color;
    }
  }
  &--customers {
    background-color: rgba($customers-color, .1);
    

    &:before {
      background-color: $customers-color;
    }
    & .achieve__number {
      color: $customers-color;
    }
  }

  


}

